--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -13,3 +13,9 @@
 .titleStyle {
     color: rgb(0, 188, 212);
 }
+
+.banner {
+  border: 10px solid #f7db07;
+  border-left: 100px solid #f7db07;
+  border-right: 100px solid #f7db07;
+}
