--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ a:hover {
   padding: 10px 15px;
   margin-bottom: 50px;
   background-color: #646fe2;
-  box-shadow: 2px 4px 10px #000;
+  box-shadow: 0px 4px 20px -10px #000;
 }
 .top-bar::after {
   content: '';
